# davici

./: .clang-format  .gitignore  .travis.yml  COPYING  Doxyfile.in  Makefile.am  NEWS  README.md  configure.ac  davici.c  davici.h
.github/workflows/: ci.yml
examples/: .gitignore  Makefile.am  sas.c  version.c
msvc/: cmd.vcxproj  cmd.vcxproj.filters  davici.def  davici.sln  davici.vcxproj  davici.vcxproj.filters  dllmain.cpp  stream.vcxproj  stream.vcxproj.filters  tester.vcxproj  tester.vcxproj.filters
tests/: .gitignore  Makefile.am  badsock.c  badtcpsock.c  cmd.c  cmdunknown.c  dump.c  event.c  eventunknown.c  many.c  recurse.c  stream.c  tcp.c  tcpsock.c  tester.c  tester.h
